--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,5 @@ AggregatorService/.idea
 AggregatorService/vendor
 EventsService/.idea
 EventsService/vendor
+FlightsService/.idea
+FlightsService/vendor
